# cpp_game_with_llm_npcs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat  run.ps1  run.sh
config/: keybindings.cfg  llm.cfg
docs/: CONTROLS.md  DEVELOPER.md
docs/learning/: GLOSSARY.md  PROGRESS.md  llm.md
docs/learning/lessons/: 0001-how-to-run-and-develop.html
personas/: baker.persona  barista.persona  companion.txt  cop.persona  hardware.persona  hotdog.persona  librarian.persona  musician.persona  taxi.persona  teacher.persona  tourist.persona
src/: DialogUI.cpp  DialogUI.hpp  LlmClient.cpp  LlmClient.hpp  main.cpp
src/app/: DialogUI.cpp  DialogUI.hpp  InputMap.cpp  InputMap.hpp  Menu.cpp  Menu.hpp  Renderer3D.cpp  Renderer3D.hpp  main.cpp
src/core/: City.cpp  City.hpp  Config.cpp  Config.hpp  DialogueSession.cpp  DialogueSession.hpp  KeyBindings.cpp  KeyBindings.hpp  LlmClient.cpp  LlmClient.hpp  Math.hpp  Npc.cpp  Npc.hpp  NpcAction.hpp  Persona.hpp  PersonaLoader.cpp  PersonaLoader.hpp  StreamAssembler.hpp  World.cpp  World.hpp
tests/: FakeOllama.hpp  Makefile  test_city.cpp  test_config.cpp  test_dialogue_session.cpp  test_keybindings.cpp  test_llm_client.cpp  test_llm_live.cpp  test_main.cpp  test_npc_action.cpp  test_npc_behavior.cpp  test_npc_history.cpp  test_persona.cpp  test_persona_roster.cpp  test_stream.cpp  test_world.cpp
